category event edit

--- a/Views/Home/List.cshtml
+++ b/Views/Home/List.cshtml
@@ -34,7 +34,7 @@
             }
         </select>
 
-         <button type="button" class="btn form-control btn-outline-secondary btn-sm" style="margin-bottom:5px; margin-top:2.5px;margin-left:2.5px;" id="filterButton">Filtrele</button>
+         <button type="submit" class="btn form-control btn-outline-secondary btn-sm" style="margin-bottom:5px; margin-top:2.5px;margin-left:2.5px;" id="filterButton">Filtrele</button>
     </div>
 </form>
 
